microservices/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  rules:
    - host: grafana.geckzone.ru
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
    - host: prometheus.geckzone.ru
      http:
        paths:
          - backend:
              serviceName: prometheus-server
              servicePort: 9090
